# change-review-orchestrator

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/versions/: 0001_initial_schema.py
infra/: prometheus.yml
sample_data/: db_migration_aml.json  dependency_upgrade.json  docs_only.json  hotfix_production.json  infra_k8s_upgrade.json  pr_payload_banking.json  security_patch_oauth.json
scripts/: run_local.py  smoke_test.py
src/change_review_orchestrator/: __init__.py  config.py  logging_setup.py  main.py
src/change_review_orchestrator/agents/: __init__.py  adjudication.py  base.py  evidence_packager.py  impact.py  intake.py  llm_narrative.py  policy.py  reliability.py  security.py  test_strategy.py
src/change_review_orchestrator/api/: __init__.py  pipeline_runner.py  schemas.py
src/change_review_orchestrator/domain/: __init__.py  enums.py  models.py  serializers.py
src/change_review_orchestrator/integrations/: __init__.py  base.py
src/change_review_orchestrator/persistence/: __init__.py  database.py  models.py  repository.py
src/change_review_orchestrator/utils/: __init__.py  metrics.py  prompt_templates.py
src/change_review_orchestrator/workflow/: __init__.py  graph.py  state.py  supervisor.py  transitions.py
tests/: conftest.py
tests/fixtures/: policy_rules.yaml  sample_diffs.py
tests/integration/: __init__.py  test_api_routes.py
tests/unit/: test_domain_models.py  test_evidence_packager_adjudication.py  test_health.py  test_impact_agent.py  test_intake_agent.py  test_llm_narrative_agent.py  test_persistence.py  test_policy_agent.py  test_reliability_agent.py  test_security_agent.py  test_test_strategy_agent.py  test_workflow_graph.py
(+9 files in other folders)
